package behavioral.strategy.classic.strategies;

public interface Strategy {
  public void operate();
}
