@startuml
skinparam BackgroundColor #F8F8F8
skinparam  Shadowing false
skinparam RoundCorner 3
skinparam noteBorderColor Khaki
skinparam noteBackgroundColor #FCF3CF
skinparam noteFontName Courier
skinparam noteFontSite 4

skinparam class {
BackgroundColor white
ArrowColor CornFlowerBlue
BorderColor #C8C8C8
BorderThickness 1.5
HeaderBackgroundColor LightGrey
}

class Client {
 - strategies:List<Strategy>
}

interface Strategy{
 + execute(data)
}

class Context{
  - strategy:Strategy
  + Context(Strategy)
  + change(strategy)
  + operate()
}

class ConcreteStrategy1{}
class ConcreteStrategy2{}

note left of Context::operate
strategy.execute(data)
end note

note left of Client
context.change(strategy)
end note

Strategy <|-- ConcreteStrategy1
Strategy <|-- ConcreteStrategy2
Client o--> Context
Context *-r-> Strategy


@enduml